k8s/game/game-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-svc
  namespace: game
spec:
  type: ClusterIP
  selector:
    app: game
  ports:
    - name: http
      port: 80
      targetPort: 3001
