k8s/game/game-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  namespace: game
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing # 퍼블릭 ALB
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          # 들어오는 모든 요청을 game-svc로 전달
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-svc
                port:
                  number: 80
